...
            setupBlock = {
                killProcess(); startActivityAndWait()
                check(device.wait(Until.findObject(By.res("new-review").enabled(true)), 15000) != null)
                check(device.wait(Until.gone(By.res("busy")), 15000))
                check(device.wait(Until.findObject(By.res("home-list")), 15000) != null)
            }) {
            val list: UiObject2 = device.findObject(By.res("home-list"))
            repeat(3) { list.scroll(Direction.DOWN, 0.8f) }
            repeat(3) { list.scroll(Direction.UP, 0.8f) }
        }
    }
}

